empece a trabajar con los cambios que pidio el cliente, arregle algunos problemas y hice cambio en la UI

--- a/EQ/EQCurrentAccountViewController.xib
+++ b/EQ/EQCurrentAccountViewController.xib
@@ -693,7 +693,6 @@
 										<string key="NSFrame">{{452, 89}, {91, 22}}</string>
 										<reference key="NSSuperview" ref="328042195"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -721,7 +720,7 @@
 										<int key="IBUIContentMode">7</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-										<string key="IBUIText">Persep.</string>
+										<string key="IBUIText">Percep.</string>
 										<reference key="IBUITextColor" ref="521124431"/>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
@@ -1311,7 +1310,6 @@
 				<string key="NSFrame">{{0, 20}, {768, 955}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
