--- a/EQ/EQOrderCell.xib
+++ b/EQ/EQOrderCell.xib
@@ -151,7 +151,7 @@
 							<object class="IBUILabel" id="740901233">
 								<reference key="NSNextResponder" ref="96116575"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{300, 0}, {63, 49}}</string>
+								<string key="NSFrame">{{300, 0}, {48, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="970150413"/>
@@ -161,7 +161,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">2222222222</string>
+								<string key="IBUIText">2222222</string>
 								<reference key="IBUITextColor" ref="231701563"/>
 								<reference key="IBUIHighlightedColor" ref="1063379280"/>
 								<int key="IBUIBaselineAdjustment">0</int>
@@ -181,7 +181,7 @@
 							<object class="IBUILabel" id="970150413">
 								<reference key="NSNextResponder" ref="96116575"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{370, 0}, {81, 49}}</string>
+								<string key="NSFrame">{{356, 0}, {81, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269784634"/>
@@ -195,6 +195,7 @@
 								<reference key="IBUITextColor" ref="231701563"/>
 								<reference key="IBUIHighlightedColor" ref="1063379280"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="300399393"/>
 								<reference key="IBUIFont" ref="676665863"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -238,6 +239,7 @@
 								<reference key="IBUITextColor" ref="231701563"/>
 								<reference key="IBUIHighlightedColor" ref="1063379280"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="300399393"/>
 								<reference key="IBUIFont" ref="676665863"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -245,7 +247,7 @@
 							<object class="IBUIButton" id="464053873">
 								<reference key="NSNextResponder" ref="96116575"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{586, 9}, {31, 31}}</string>
+								<string key="NSFrame">{{607, 9}, {31, 31}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="321914927"/>
@@ -284,7 +286,7 @@
 							<object class="IBUIButton" id="321914927">
 								<reference key="NSNextResponder" ref="96116575"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{641, 9}, {31, 31}}</string>
+								<string key="NSFrame">{{662, 9}, {31, 31}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991820849"/>
@@ -313,7 +315,7 @@
 							<object class="IBUIButton" id="991820849">
 								<reference key="NSNextResponder" ref="96116575"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{697, 9}, {30, 31}}</string>
+								<string key="NSFrame">{{718, 9}, {30, 31}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -339,7 +341,7 @@
 								<reference key="IBUIFont" ref="904898000"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{758, 48}</string>
+						<string key="NSFrameSize">{768, 48}</string>
 						<reference key="NSSuperview" ref="122638599"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="658325435"/>
@@ -355,7 +357,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{758, 49}</string>
+				<string key="NSFrameSize">{768, 49}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="96116575"/>
@@ -379,14 +381,6 @@
 						<reference key="destination" ref="658325435"/>
 					</object>
 					<int key="connectionID">86</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">syncDateLabel</string>
-						<reference key="source" ref="122638599"/>
-						<reference key="destination" ref="606195497"/>
-					</object>
-					<int key="connectionID">87</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -461,6 +455,14 @@
 					<int key="connectionID">100</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">creationDateLabel</string>
+						<reference key="source" ref="122638599"/>
+						<reference key="destination" ref="606195497"/>
+					</object>
+					<int key="connectionID">102</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">editButtonAction:</string>
 						<reference key="source" ref="464053873"/>
@@ -516,12 +518,12 @@
 							<reference ref="138424748"/>
 							<reference ref="273324523"/>
 							<reference ref="740901233"/>
-							<reference ref="970150413"/>
 							<reference ref="269784634"/>
 							<reference ref="1073345466"/>
 							<reference ref="464053873"/>
 							<reference ref="321914927"/>
 							<reference ref="991820849"/>
+							<reference ref="970150413"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -614,7 +616,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">101</int>
+			<int key="maxID">102</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -645,13 +647,13 @@
 						<string key="cancelButton">UIButton</string>
 						<string key="clienLabel">UILabel</string>
 						<string key="cloneButton">UIButton</string>
+						<string key="creationDateLabel">UILabel</string>
 						<string key="discountLabel">UILabel</string>
 						<string key="editButton">UIButton</string>
 						<string key="grossPriceLabel">UILabel</string>
 						<string key="netPriceLabel">UILabel</string>
 						<string key="orderNumberLabel">UILabel</string>
 						<string key="statusImageView">UIImageView</string>
-						<string key="syncDateLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="billingDateLabel">
@@ -669,6 +671,10 @@
 						<object class="IBToOneOutletInfo" key="cloneButton">
 							<string key="name">cloneButton</string>
 							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="creationDateLabel">
+							<string key="name">creationDateLabel</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="discountLabel">
 							<string key="name">discountLabel</string>
@@ -693,10 +699,6 @@
 						<object class="IBToOneOutletInfo" key="statusImageView">
 							<string key="name">statusImageView</string>
 							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="syncDateLabel">
-							<string key="name">syncDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
